# headlines

./: .gitignore  Cargo.toml  LICENSE  README.md  setup_web.bat  start_web.bat
headlines/: Cargo.toml  build.rs
headlines/src/: headlines.rs  lib.rs  main.rs
newsapi/: Cargo.toml
newsapi/src/: lib.rs
webapp/: index.html
