[package]
name = "headlines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.4.0"
eframe = "0.15.0"
image = "0.23.14"
newsapi = { path = "../newsapi", features = ["blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.3"

[features]
