[package]
name = "headlines"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.15.0", features = ["persistence"] }
gloo-timers = "0.2.2"
image = "0.23.14"
newsapi = { path = "../newsapi", features = ["blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
wasm-bindgen-futures = "0.4.28"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch="wasm32")'.dependencies]
tracing-wasm = "0.2.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[features]
