[package]
name = "newsapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.6", features = ["json", "blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.30"
url = "2.2.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwasm = "0.3.1"

[features]
blocking = []
